--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "node lib/index.js",
+    "build": "tsc -p .",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,10 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "bad-words": "^3.0.4",
+    "dictionary-en": "^3.2.0",
+    "dictionary-es": "^3.2.0",
+    "dictionary-fr": "^2.8.0",
+    "dotenv": "^16.0.3",
+    "express": "4.18.2",
+    "nspell": "^2.1.5",
+    "twitter-api-v2": "^1.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/nspell": "^2.1.3",
     "eslint": "^8.40.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
