--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "Refactorización del backend para la aplicación T-CREo. MiniProyecto de Desarrollo de Software para la USBve.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
-    "start": "node lib/index.js",
+    "dev": "ts-node-dev src/server.ts",
+    "start": "node lib/server.js",
     "build": "tsc -p .",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,11 +20,16 @@
     "dictionary-fr": "^2.8.0",
     "dotenv": "^16.0.3",
     "express": "4.18.2",
+    "express-validator": "^7.0.1",
+    "express-winston": "^4.2.0",
     "nspell": "^2.1.5",
-    "twitter-api-v2": "^1.14.2"
+    "twitter-api-v2": "^1.14.2",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/express-validator": "^3.0.0",
     "@types/nspell": "^2.1.3",
     "eslint": "^8.40.0",
     "ts-node-dev": "^2.0.0",
