--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
+    "cors": "^2.8.5",
     "dictionary-en": "^3.2.0",
     "dictionary-es": "^3.2.0",
     "dictionary-fr": "^2.8.0",
@@ -27,6 +28,7 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-validator": "^3.0.0",
