--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Refactorización del backend para la aplicación T-CREo. MiniProyecto de Desarrollo de Software para la USBve.",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "dev": "nodemon src/server.ts",
     "start": "node lib/server.js",
     "build": "tsc -p .",
     "tsc": "tsc",
@@ -23,6 +23,8 @@
     "express": "4.18.2",
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "nspell": "^2.1.5",
     "twitter-api-v2": "^1.14.2",
     "winston": "^3.9.0"
@@ -32,6 +34,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-validator": "^3.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/nspell": "^2.1.3",
     "eslint": "^8.40.0",
     "ts-node-dev": "^2.0.0",
