--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.2
 blis==0.7.9
 catalogue==2.0.8
 certifi==2023.5.7
@@ -6,15 +7,20 @@ click==8.1.3
 colorclass==2.2.2
 confection==0.0.4
 cymem==2.0.7
+deep-translator==1.11.1
 docopt==0.6.2
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0-py3-none-any.whl
+es-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/es_core_news_lg-3.5.0/es_core_news_lg-3.5.0-py3-none-any.whl
 es-core-news-md @ https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.5.0/es_core_news_md-3.5.0-py3-none-any.whl
 ftfy==6.1.1
 idna==3.4
+isodate==0.6.1
 Jinja2==3.1.2
 joblib==1.2.0
 langcodes==3.3.0
 langid==1.1.6
+language-tool-python==2.7.1
+loguru==0.7.0
 MarkupSafe==2.1.3
 murmurhash==1.0.9
 nltk==3.8.1
@@ -26,9 +32,11 @@ pathy==0.10.1
 pip-upgrader==1.4.15
 preshed==3.0.8
 pydantic==1.10.9
+pyparsing==3.1.0
 python-dateutil==2.8.2
 pytz==2023.3
 PyWavelets==1.4.1
+rdflib==6.3.2
 regex==2023.6.3
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -36,9 +44,12 @@ scikit-learn==1.1.2
 scipy==1.10.1
 six==1.16.0
 smart-open==6.3.0
+soupsieve==2.4.1
 spacy==3.5.3
+spacy-dbpedia-spotlight==0.2.6
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
+SPARQLWrapper==2.0.0
 spicy==0.16.0
 srsly==2.4.6
 terminaltables==3.1.10
