--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node lib/server.js",
     "build": "tsc -p .",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -36,10 +36,15 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-validator": "^3.0.0",
+    "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.97",
     "@types/nspell": "^2.1.3",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.40.0",
+    "jest": "^29.6.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
