--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bad-words": "^3.0.4",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
