--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/supertest": "^2.0.12",
     "eslint": "^8.40.0",
     "jest": "^29.6.0",
+    "jest-mock-console": "^2.0.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
